# xembsni

./: .gitignore  Cargo.toml  Makefile  README.md
.aide/shared/: manifest.json
.aide/shared/decisions/: DECISIONS.md
.aide/shared/decisions/aide-decision-persistence-e3ce388b/: 1782921977293998577.md
.aide/shared/decisions/aide-memory-persistence-ec652b5f/: 1782921977292367415.md
.aide/shared/decisions/changelog-discipline-10944d16/: 1782921977278325544.md
.aide/shared/decisions/code-documentation-ba143cf9/: 1782921977268193002.md
.aide/shared/decisions/commit-messages-9648c30c/: 1782921977282219973.md
.aide/shared/decisions/dependency-management-0518ea7f/: 1782921977286128341.md
.aide/shared/decisions/diagrams-as-code-e695ed6e/: 1782921977280683389.md
.aide/shared/decisions/docs-as-code-a3677751/: 1782921977272260869.md
.aide/shared/decisions/docs-co-location-c609dc6f/: 1782921977274552604.md
.aide/shared/decisions/docs-versioning-6ec0a693/: 1782921977276100958.md
.aide/shared/decisions/gha-action-pinning-0a29cd7f/: 1782921999510968664.md
.aide/shared/decisions/gha-branch-protection-1a16acd4/: 1782921999520633121.md
.aide/shared/decisions/gha-permissions-ef9d3cb2/: 1782921999512889024.md
.aide/shared/decisions/gha-security-b23fd56e/: 1782921999515319458.md
.aide/shared/decisions/gha-snapshot-releases-9bb1b306/: 1782921999519155837.md
.aide/shared/decisions/gha-versioning-4759fcb8/: 1782921999516869681.md
.aide/shared/decisions/gha-workflow-structure-26fcb37f/: 1782921999508216554.md
.aide/shared/decisions/pr-hygiene-cade299d/: 1782921977284556778.md
.aide/shared/decisions/rust-async-512c12d3/: 1782921977305620323.md
.aide/shared/decisions/rust-ci-caching-53bb6b21/: 1782921999526211572.md
.aide/shared/decisions/rust-ci-coverage-8d3daebe/: 1782921999531095010.md
.aide/shared/decisions/rust-ci-matrix-44883f27/: 1782921999524584009.md
.aide/shared/decisions/rust-ci-sanitizers-9664ff42/: 1782921999529539216.md
.aide/shared/decisions/rust-ci-security-48746ab2/: 1782921999527843454.md
.aide/shared/decisions/rust-ci-workflow-3236b6df/: 1782921999522176505.md
.aide/shared/decisions/rust-clippy-e9df8b57/: 1782921977300180481.md
.aide/shared/decisions/rust-dependencies-5c180cb2/: 1782921977312617789.md
.aide/shared/decisions/rust-documentation-023cca53/: 1782921977311067665.md
.aide/shared/decisions/rust-edition-policy-d55c6ff0/: 1782921977296306703.md
.aide/shared/decisions/rust-error-handling-35d2b5d9/: 1782921977298614928.md
.aide/shared/decisions/rust-formatting-7f1c1a9d/: 1782921977314907244.md
.aide/shared/decisions/rust-logging-be6c3873/: 1782921977307246726.md
.aide/shared/decisions/rust-performance-9e4d1a3b/: 1782921977316343209.md
.githooks/: pre-commit
.github/workflows/: ci.yml
contrib/systemd/: xembsni.service
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/bridge/tests/: e2e.rs
crates/sni/: Cargo.toml
crates/sni/src/: lib.rs
crates/tray-host/: Cargo.toml
crates/tray-host/examples/: mktray.rs  winetray.rs
crates/tray-host/src/: atoms.rs  control.rs  host.rs  image.rs  lib.rs
crates/tray-host/tests/: dock.rs  visibility.rs
crates/xembsni/: Cargo.toml
crates/xembsni/src/: lib.rs  main.rs
(+6 files in other folders)
