[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmylchreest/xembsni"
authors = ["John Mylchreest <jmylchreest@gmail.com>"]

[workspace.dependencies]
# Internal crates
xembsni-tray-host = { path = "crates/tray-host" }
xembsni-sni = { path = "crates/sni" }
xembsni-bridge = { path = "crates/bridge" }

# External
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
x11rb = { version = "0.13", features = ["composite", "damage", "xfixes", "xtest"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Faster incremental dev builds while keeping the daemon responsive.
[profile.dev]
opt-level = 1
