[package]
name = "xembsni-tray-host"
description = "X11 system-tray selection owner and XEMBED host for xembsni."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
x11rb.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
