[package]
name = "xembsni"
description = "Bridge XEmbed system-tray icons (e.g. Wine/Proton apps) to StatusNotifierItem (SNI) tray items for Wayland bars."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "xembsni"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xembsni-tray-host.workspace = true
xembsni-bridge.workspace = true

[lints]
workspace = true
